--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,6 +31,7 @@ cmak.zkhosts=${?ZK_HOSTS}
 pinned-dispatcher.type="PinnedDispatcher"
 pinned-dispatcher.executor="thread-pool-executor"
 application.features=["KMClusterManagerFeature","KMTopicManagerFeature","KMPreferredReplicaElectionFeature","KMReassignPartitionsFeature", "KMScheduleLeaderElectionFeature"]
+application.features=[]
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
